[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clario360"
version = "1.0.0"
description = "Official Python SDK for the Clario 360 Enterprise AI Platform"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Clario 360", email = "sdk@clario360.sa" }]
keywords = [
  "cybersecurity",
  "siem",
  "ueba",
  "data-security",
  "grc",
  "ai-governance",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Typing :: Typed",
]
dependencies = [
  "requests>=2.28,<3.0",
  "pydantic>=2.0,<3.0",
]

[project.optional-dependencies]
async = ["httpx>=0.27,<1.0", "anyio>=4.0,<5.0"]
cli = ["click>=8.1,<9.0", "tabulate>=0.9,<1.0", "pyyaml>=6.0,<7.0"]
notebooks = ["pandas>=2.0", "plotly>=5.15", "ipywidgets>=8.0"]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "mypy>=1.8",
  "ruff>=0.2",
  "responses>=0.24",
]
all = [
  "clario360[async,cli,notebooks,dev]",
]

[project.scripts]
clario360 = "clario360_cli.cli:cli"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["clario360*", "clario360_cli*"]

[tool.mypy]
strict = true
python_version = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=clario360 --cov-report=term-missing"

[tool.ruff]
target-version = "py39"
line-length = 100
